# spec-pipeline

./: .gitattributes  .gitignore  README.md
.claude/agents/: corpus-qa.md  doc-analyzer.md  doc-guide.md  doc-indexer.md  doc-qa.md
.claude/agents/code-fact-extractor/: code-fact-extractor.md
.claude/agents/codebase-mapper/: codebase-mapper.md
.claude/agents/corpus-builder/: corpus-builder.md
.claude/agents/corpus-qa/: corpus-qa.md
.claude/agents/doc-author/: doc-author.md
.claude/agents/doc-indexer/: doc-indexer.md
.claude/agents/doc-qa/: doc-qa.md
.claude/agents/fact-batch/: fact-batch.md
.claude/skills/contextdb/: SKILL.md  (+1 more)
.claude/skills/docextract/scripts/launcher/: pyproject.toml  skill_launcher.py
.contextdb/: metamodel.yaml
.github/agents/: code-fact-extractor.agent.md  codebase-mapper.agent.md  corpus-builder.agent.md  corpus-qa.agent.md  doc-analyzer.agent.md  doc-analyzer.md  doc-author.agent.md  doc-guide.agent.md  doc-guide.md  doc-indexer.agent.md  doc-qa.agent.md  doc-qa.md  fact-batch.agent.md  fact-extractor.agent.md  grounded-qa.agent.md  skill-setup.agent.md  spec-batch.agent.md  spec-designer.agent.md  spec-extractor.agent.md  spec-reviewer.agent.md
.specdb/: README.md  metamodel.yaml
.specdb/docs/: standard-pack-design.md
.specdb/documents/: basic-design-excel.yaml  build-spec.yaml  dist-layout.yaml  trace-matrix.yaml
.specdb/relations/: dataflow.yaml  deploys-to.yaml  follows.yaml  realizes.yaml  uses.yaml
.specdb/templates/: basic-design-excel.html.j2  build-spec.md.j2  dist-layout.md.j2  trace-matrix.md.j2
docagent/: README.md  cli.py  store.py
(+322 files in other folders)
